Added redirect page

--- a/setup-files/nodogsplash.conf
+++ b/setup-files/nodogsplash.conf
@@ -3,6 +3,8 @@ GatewayAddress 192.168.2.1
 MaxClients 250
 AuthIdleTimeout 480
 BinAuth /bin/myauth.sh
+StatusPage status.html
+RedirectURL http://192.168.2.1:8000
 
 FirewallRuleSet authenticated-users {
     FirewallRule allow all
